--- a/config/swaync/style.css
+++ b/config/swaync/style.css
@@ -1,4 +1,4 @@
-@define-color cc-bg rgba(23, 63, 79, 0.4);
+@define-color cc-bg rgba(13, 13, 13, 0.8);
 
 @define-color noti-text-color rgba(53, 185, 171, 1);
 @define-color noti-border-color rgba(53, 185, 171, 0.4);
@@ -11,8 +11,8 @@
 @define-color bg-selected rgba(33, 164, 223, 1);
 
 * {
-    font-family: "Source Sans Pro";
-    font-size:   15px;
+  font-family: "Source Sans Pro";
+  font-size: 15px;
 }
 
 .notification-row {
@@ -27,7 +27,9 @@
 .notification {
   border-radius: 8px;
   margin: 6px 12px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7),
+  box-shadow:
+    0 0 0 1px rgba(0, 0, 0, 0.3),
+    0 1px 3px 1px rgba(0, 0, 0, 0.7),
     0 2px 6px 2px rgba(0, 0, 0, 0.3);
   padding: 0;
 }
@@ -197,6 +199,7 @@
  */
 .control-center {
   background: @cc-bg;
+  border: 2px solid rgba(53, 185, 171, 1);
 }
 
 /* The first control-center child. May be easier to style this than .control-center */
