--- a/config/anyrun/style.css
+++ b/config/anyrun/style.css
@@ -1,4 +1,4 @@
-@define-color accent #35b9ab;
+@define-color accent #1cb08e;
 @define-color bg-color #161616;
 @define-color fg-color #eeeeee;
 @define-color desc-color #cccccc;
