--- a/config/ironbar/style.css
+++ b/config/ironbar/style.css
@@ -2,7 +2,7 @@
   --color-dark-primary: #1c1c1c;
   --color-dark-secondary: #2d2d2d;
   --color-white: #fff;
-  --color-active: #35b9ab;
+  --color-active: #1cb08e;
   --color-urgent: #8f0a0a;
 
   --margin-lg: 0.8em;
